@@ -153,6 +153,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #12132: Skip test_build_ext in case the xxmodule is not found.
+
 - Issue #12105: Add O_CLOEXEC to the os module.
 
 - Issue #12079: Decimal('Infinity').fma(Decimal('0'), (3.91224318126786e+19+0j))
